--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <title>Kristin Agustsson</title>
     </head>
     <body>
-        <p>Home.</p>
+        <p>Test Page.</p>
     </body>
 </html>
