--- a/index.html
+++ b/index.html
@@ -1,8 +1,68 @@
-<html>
-    <head>
-        <title>Kristin Agustsson</title>
-    </head>
-    <body>
-        <p>Test Page.</p>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- FontAwesome icons -->
+    <script src="https://use.fontawesome.com/00019aef5d.js"></script>
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+  </head>
+  <body>
+    <!-- Navigation -->
+    <div>
+      <nav>
+        <ul>
+          <li>
+            <a href="#home" 
+               class="fa fa-home" 
+               data-toggle="tooltip" 
+               data-placement="right" 
+               title="Home"></a>
+          </li>
+          <li>
+            <a href="#about" 
+               class="fa fa-user" 
+               data-toggle="tooltip" 
+               data-placement="right" 
+               title="About"></a>
+          </li>
+          <li>
+            <a href="#education" 
+               class="fa fa-graduation-cap" 
+               data-toggle="tooltip" 
+               data-placement="right" 
+               title="Education"></a>
+          </li>
+          <li>
+            <a href="#experience" 
+               class="fa fa-briefcase" 
+               data-toggle="tooltip" 
+               data-placement="right" 
+               title="Experience"></a>
+          </li>
+          <li>
+            <a href="#contact" 
+               class="fa fa-envelope" 
+               data-toggle="tooltip" 
+               data-placement="right" 
+               title="Contact"></a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
+    <!-- Content -->
+    <div>
+      <h1>Hello, I am a Resilient Coder!</h1>
+    </div>
+
+    <!-- Bootstrap JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+  </body>
 </html>
