--- a/index.html
+++ b/index.html
@@ -15,36 +15,36 @@
     <!-- Navigation -->
     <div>
       <nav>
-        <ul>
-          <li>
+        <ul class="list-group">
+          <li class="list-group-item">
             <a href="#home" 
                class="fa fa-home" 
                data-toggle="tooltip" 
                data-placement="right" 
                title="Home"></a>
           </li>
-          <li>
+          <li class="list-group-item">
             <a href="#about" 
                class="fa fa-user" 
                data-toggle="tooltip" 
                data-placement="right" 
                title="About"></a>
           </li>
-          <li>
+          <li class="list-group-item">
             <a href="#education" 
                class="fa fa-graduation-cap" 
                data-toggle="tooltip" 
                data-placement="right" 
                title="Education"></a>
           </li>
-          <li>
+          <li class="list-group-item">
             <a href="#experience" 
                class="fa fa-briefcase" 
                data-toggle="tooltip" 
                data-placement="right" 
                title="Experience"></a>
           </li>
-          <li>
+          <li class="list-group-item">
             <a href="#contact" 
                class="fa fa-envelope" 
                data-toggle="tooltip" 
@@ -57,7 +57,7 @@
 
     <!-- Content -->
     <div>
-      <h1>Hello, I am a Resilient Coder!</h1>
+      <h1>Hello, I am a template!</h1>
     </div>
 
     <!-- Bootstrap JavaScript -->
