--- a/index.html
+++ b/index.html
@@ -18,23 +18,22 @@
       <div class="row">
         <!-- Navigation -->      
         <div class="col-md-4 col-lg-3">
-          <div >
-            <div>
-              <ul class="nav flex-column" id="exCollapsingNavbar3">
-                <li class="nav-item">
-                    <a class="nav-link active" href="#">Active</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
-                </li>
-              </ul>
-            </div>
+          <div class="list-group">
+            <a class="list-group-item" href="#home">
+              <i class="fa fa-home fa-fw"></i>&nbsp; Home
+            </a>
+            <a class="list-group-item" href="#about">
+              <i class="fa fa-user fa-fw"></i>&nbsp; About
+            </a>
+            <a class="list-group-item" href="#home">
+              <i class="fa fa-graduation-cap fa-fw"></i>&nbsp; Education
+            </a>
+            <a class="list-group-item" href="#home">
+              <i class="fa fa-briefcase fa-fw"></i>&nbsp; Experience
+            </a>
+            <a class="list-group-item" href="#home">
+              <i class="fa fa-envelope fa-fw"></i>&nbsp; Contact
+            </a>    
           </div>
         </div>
 
