--- a/index.html
+++ b/index.html
@@ -14,50 +14,107 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <div class="container">
-      <div class="row">
-        <!-- Navigation -->      
-        <div class="col-md-4 col-lg-3">
-          <div class="list-group">
-            <a class="list-group-item" href="#home">
-              <i class="fa fa-home fa-fw"></i>&nbsp; Home
-            </a>
-            <a class="list-group-item" href="#about">
-              <i class="fa fa-user fa-fw"></i>&nbsp; About
-            </a>
-            <a class="list-group-item" href="#home">
-              <i class="fa fa-graduation-cap fa-fw"></i>&nbsp; Education
-            </a>
-            <a class="list-group-item" href="#home">
-              <i class="fa fa-briefcase fa-fw"></i>&nbsp; Experience
-            </a>
-            <a class="list-group-item" href="#home">
-              <i class="fa fa-envelope fa-fw"></i>&nbsp; Contact
-            </a>    
-          </div>
-        </div>
+    <header class="header">
+      <!-- Links to your social media pages -->
+      <div class="container-fluid">
+        <ul class="social list-inline">
+          <li class="list-inline-item"><a href="#"><i class="fa fa-github-alt" aria-hidden="true"></i></a></li>
+          <li class="list-inline-item"><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+          <li class="list-inline-item"><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+        </ul>
 
-        <!-- Content -->
-        <div class="col-md-8 col-lg-9">
-          <h1>Hello World!</h1>
-
-          <hr />
-
-          <div class="card text-white bg-secondary">
-            <div class="card-body">
-              <h3 class="card-title">Example Personal Webpage</h3>
-              <p>This is a simple example of a personal webpage
-                hosted on Github pages and using the Bootstrap 
-                UI framework.</p>
-            </div>
-          </div>
-
-          <hr />
-
-          <p>At vero eos et accusamus. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit. Quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+        <div class="action">
+          <a class="btn" href="#"><i class="fa fa-download" aria-hidden="true"></i> Download My Resume!</a>
         </div>
       </div>
 
+      <!-- Sample introduction -->
+      <div class="container h-100 pb-2 text-center">
+        <h1>Jane Doe</h1>
+        <h4>Front-End Developer</h4>
+        <p>Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce kohlrabi amaranth water spinach avocado daikon napa cabbage asparagus winter purslane kale. Celery potato scallion desert raisin horseradish spinach carrot soko. Lotus root water spinach fennel kombu maize bamboo shoot green bean swiss chard seakale pumpkin onion chickpea gram corn pea. Brussels sprout coriander water chestnut gourd swiss chard wakame kohlrabi beetroot carrot watercress. Corn amaranth salsify bunya nuts nori azuki bean chickweed potato bell pepper artichoke.</p>
+      </div>
+
+      <!-- Navigation -->
+      <div class="navbar-wrapper text-center">
+        <ul class="nav navbar list-inline">
+          <li class="nav-item"><a class="scrollto nav-link" href="#experience-section">Experience</a></li>
+          <li class="nav-item"><a class="scrollto nav-link" href="#education-section">Education</a></li>
+          <li class="nav-item"><a class="scrollto nav-link" href="#skills-section">Skills</a></li>
+          <li class="nav-item"><a class="scrollto nav-link" href="#contact-section">Contact</a></li>
+        </ul>
+      </div>
+    </header>
+
+    <!-- Experience Section -->
+    <div class="wrapper container">
+      <section id="experience-section" class="experience-section section">
+        <h2 class="section-title mb-4">Work Experiences</h2>
+        <div class="timeline">
+          <div class="item">
+            <div>
+              <h5>Frontend World</h5>
+              <div>Boston</div>
+            </div>
+            <div class="job-title">
+              <div>Frontend Developer</div>
+              <div>2016-Present</div>
+            </div>
+            <div>
+              <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p> 
+              <ul>
+                  <li>Amaranth tatsoi tomatillo</li>
+                  <li>Pea horseradish azuki bean lettuce</li>
+                  <li>Chickweed okra pea winter</li>
+              </ul>
+            </div>
+          </div>
+              
+          <div class="item">
+            <div>
+              <h5>Hello Startup</h5>
+              <div>New York</div>
+            </div>
+            <div class="job-title">
+              <div>Intern</div>
+              <div>2015-2016</div>
+            </div>
+            <div>
+              <p>Beetroot water spinach okra water chestnut ricebean pea catsear courgette summer purslane. Water spinach arugula pea tatsoi aubergine spring onion bush tomato kale radicchio turnip chicory salsify pea sprouts fava bean. Dandelion zucchini burdock yarrow chickpea dandelion sorrel courgette turnip greens tigernut soybean radish artichoke wattle seed endive groundnut broccoli arugula.</p> 
+            </div>
+          </div>
+        </div>  
+      </section>
+        
+      <section id="education-section" class="education-section section">
+        <h2 class="section-title mb-4">Education</h2>
+        <div class="row align-items-center">
+          <div class="item col-12 col-md-6">
+            <div class="item-inner">
+              <h5 class="degree">MS Computer Science</h5>
+              <div class="education-body">
+                University of New Hampshire
+              </div>
+              <div class="time">2014-2015</div>
+              <div>
+                <p>Soko radicchio bunya nuts gram dulse silver beet parsnip napa cabbage lotus root sea lettuce brussels sprout cabbage. Catsear cauliflower garbanzo yarrow salsify chicory garlic bell pepper napa cabbage lettuce tomato kale arugula melon sierra leone bologi rutabaga tigernut.</p>
+              </div>
+            </div>
+          </div>
+          <div class="item col-12 col-md-6">
+            <div class="item-inner">
+              <h5 class="degree">BS Computer Science</h5>
+              <div class="education-body">
+                University of Massachusetts
+              </div>
+              <div class="time">2010-2014</div>
+              <div>
+                <p>Sea lettuce gumbo grape kale kombu cauliflower salsify kohlrabi okra sea lettuce broccoli celery lotus root carrot winter purslane turnip greens garlic. Jícama garlic courgette coriander radicchio plantain scallion cauliflower fava bean desert raisin spring onion chicory bunya nuts.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
 
     <!-- Bootstrap JavaScript -->
